Set targets to be a list, not a map.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -463,7 +463,7 @@ scrape_configs:
     params:
       module: [http_2xx]
     static_configs:
-      targets:
+      - targets:
         - https://{{HTTP_AUTH}}@alertmanager.{{PROJECT}}.measurementlab.net
         - https://{{HTTP_AUTH}}@grafana.{{PROJECT}}.measurementlab.net
         - https://{{HTTP_AUTH}}@prometheus.{{PROJECT}}.measurementlab.net
