Fixes the service name of the internal URL at which Prom can be reloaded.

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -233,7 +233,7 @@ spec:
       # stable version.
       - image: jimmidyson/configmap-reload:v0.2.2
         name: configmap-reload
-        args: ["-webhook-url", "http://prometheus-public-service.default.svc.cluster.local:9090/-/reload",
+        args: ["-webhook-url", "http://prometheus-service.default.svc.cluster.local:9090/-/reload",
                "-volume-dir", "/prometheus-config"]
         env:
         - name: PROM_RELOAD_URL
