--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -484,13 +484,17 @@ scrape_configs:
         - https://prometheus.{{PROJECT}}.measurementlab.net
     relabel_configs:
       - source_labels: [__address__]
+        regex: (.*)
         target_label: __param_target
+        replacement: ${1}
+      - source_labels: [module]
+        regex: (.*)
+        target_label: __param_module
+        replacement: ${1}
       - source_labels: [__param_target]
-        regex: (.+):443
+        regex: (.*)
         target_label: instance
         replacement: ${1}
-      - source_labels: [__param_module]
-        target_label: module
       # Since __address__ is the target that prometheus will contact,
       # unconditionally reset the __address__ label to the blackbox exporter
       # address.
