Fixes a misconfiguration in the nginx-loadbalancer-services job config.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -482,7 +482,7 @@ scrape_configs:
         - https://gmx.{{PROJECT}}.measurementlab.net
         - https://grafana.{{PROJECT}}.measurementlab.net
         - https://prometheus.{{PROJECT}}.measurementlab.net
-        labels:
+      - labels:
         - module: nginx_lb_svcs_online
     relabel_configs:
       - source_labels: [__address__]
