Fixes a label rewrite regex to less greedy in what it returns.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -494,7 +494,7 @@ scrape_configs:
         target_label: __param_module
         replacement: ${1}
       - source_labels: [__param_target]
-        regex: https://(.*)\..*
+        regex: https://([a-z]+).*
         target_label: service
         replacement: ${1}
       - source_labels: [__param_target]
