Disables basic_auth in Grafana. Adds paths to BBE targets, since apparently they do accept full paths and not just hosts:ports. Updates Prom alert to be more meaningful and correct.

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -249,7 +249,7 @@ api_url = https://www.googleapis.com/oauth2/v1/userinfo
 
 #################################### Basic Auth ##########################
 [auth.basic]
-;enabled = true
+enabled = false
 
 #################################### Auth LDAP ##########################
 [auth.ldap]
