Prefers the name 'proxy' to 'loadbalancer' for nginx. Adds a period after a comment.

--- a/config/federation/blackbox/config.yml.template
+++ b/config/federation/blackbox/config.yml.template
@@ -129,7 +129,7 @@ modules:
   # target=<http[s]://host:port>
   #
   # Works with http or https targets.
-  nginx_lb_svcs_online:
+  nginx_proxy_svcs_online:
     prober: http
     timeout: 9s
     http:
