Fixes a small typo s/an/a/.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -495,7 +495,7 @@ scrape_configs:
         regex: (.*)
         target_label: __param_module
         replacement: ${1}
-      # Isolate the hostname from the URL, which will give us an good
+      # Isolate the hostname from the URL, which will give us a good
       # representation of the service.
       - source_labels: [__param_target]
         regex: https://([a-z]+).*
