--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -502,6 +502,17 @@ groups:
         repository to configure collectd-mlab. Login to the node and run the check
         script manually to see what the specific error is (/usr/lib/nagios/plugins/check_collectd_mlab.py).
       summary: A collectd-mlab service metric is missing.
+# One or more of the backend services handled by the nginx proxy is down.
+  - alert: Prometheus_NginxProxiedServiceDown
+    expr: probe_success{job="nginx-proxied-services"} == 0
+    for: 30m
+    labels:
+      repo: ops-tracker
+      severity: ticket
+    annotations:
+      hints: Did the nginx k8s deployment or nginx-lb k8s service fail? Did the
+        backend service or deployment fail in some way?
+      summary: One or more of the backend services handled by the nginx proxy is down.
 # TODO:
 #   Replace this with two other alerts:
 #    1.  Alert if hourly test volume on servers drops relative to same hour on recent days.
