Remove template references for invalid cases

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -161,7 +161,7 @@ groups:
       repo: dev-tracker
       severity: ticket
     annotations:
-      summary: Inventory configuration {{ $labels.service }} is missing.
+      summary: Inventory configuration is missing.
       description: Machine or rsyncd service configuration has been missing for
         too long. Check the behavior of the m-lab/operator/.travis.yml
         deployment, the GCS buckets, and the gcp-service-discovery component of
@@ -330,7 +330,7 @@ groups:
       repo: dev-tracker
       severity: ticket
     annotations:
-      summary: The script_exporter service is down on {{ $labels.instance }}.
+      summary: The script_exporter service is down on missing.
       description: |
         The script_exporter service runs in a Docker container on a GCE VM
         named 'script-exporter' in each M-Lab GCP project. For deployment
@@ -681,7 +681,7 @@ groups:
       severity: ticket
     annotations:
       summary: The ETL Gardener instance is down or missing.
-      description: Gardener runs in the data-processing-cluster
+      description: Gardener runs in the data-processing-cluster.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/eBbUW6oik
 
 # ETL_ParserPanicNonZero fires when an ETL parser panics. The number of panics
