Correct reference to github issue query

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -99,7 +99,7 @@ receivers:
     # NOTE: An empty url is invalid config. An invalid URL will not display.
     - type: button
       text: Github
-      url: '{{GITHUB_RECEIVER_URL}}%20'
+      url: '{{GITHUB_ISSUE_QUERY}}%20'
     # NOTE: Add a dashboard.
     - type: button
       text: '{{if .CommonAnnotations.dashboard}}Dashboard{{else}}Create Dashboard{{end}}'
