Update repeat interval to 12h

--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -26,8 +26,8 @@ route:
   # in the same group.
   group_interval: 5m
 
-  # By default, wait 'repeat_interval' before resending an alert.
-  repeat_interval: 3h
+  # By default, wait 'repeat_interval' before resending a notification.
+  repeat_interval: 12h
 
   # When no other routes match, use the default receiver.
   receiver: slack-alerts-ticket
