Separate apply-grafana-dashboards.sh from apply-global-prometheus.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,9 @@ deploy:
 #########################################
 ## Sandbox
 - provider: script
-  script: $TRAVIS_BUILD_DIR/kubectl.sh mlab-sandbox prometheus-federation ./apply-global-prometheus.sh
+  script:
+    $TRAVIS_BUILD_DIR/kubectl.sh mlab-sandbox prometheus-federation ./apply-global-prometheus.sh
+    && $TRAVIS_BUILD_DIR/kubectl.sh mlab-sandbox prometheus-federation ./apply-grafana-dashboards.sh
   skip_cleanup: true
   on:
     repo: m-lab/prometheus-support
@@ -81,6 +83,7 @@ deploy:
   # also deploy *only the grafana dashboards* to mlab-oti.
   script:
     $TRAVIS_BUILD_DIR/kubectl.sh mlab-staging prometheus-federation ./apply-global-prometheus.sh
+    && $TRAVIS_BUILD_DIR/kubectl.sh mlab-staging prometheus-federation ./apply-grafana-dashboards.sh
     && $TRAVIS_BUILD_DIR/kubectl.sh mlab-oti prometheus-federation ./apply-grafana-dashboards.sh
   skip_cleanup: true
   on:
@@ -123,7 +126,9 @@ deploy:
 #########################################
 ## Production
 - provider: script
-  script: $TRAVIS_BUILD_DIR/kubectl.sh mlab-oti prometheus-federation ./apply-global-prometheus.sh
+  script:
+    $TRAVIS_BUILD_DIR/kubectl.sh mlab-oti prometheus-federation ./apply-global-prometheus.sh
+    && $TRAVIS_BUILD_DIR/kubectl.sh mlab-oti prometheus-federation ./apply-grafana-dashboards.sh
   skip_cleanup: true
   on:
     repo: m-lab/prometheus-support
