Temporarily set image tag to latest.

--- a/k8s/prometheus-federation/deployments/script-exporter.yml
+++ b/k8s/prometheus-federation/deployments/script-exporter.yml
@@ -16,7 +16,7 @@ spec:
         prometheus.io/scrape: 'true'
     spec:
       containers:
-      - image: measurementlab/script-exporter:v0.1.0
+      - image: measurementlab/script-exporter:latest
         name: script-exporter
         ports:
         - containerPort: 9172
