Add new kubeip permission compute.networks.useExternalIp

--- a/config/federation/kubeip/roles.yml
+++ b/config/federation/kubeip/roles.yml
@@ -11,5 +11,6 @@ includedPermissions:
 - container.clusters.get
 - container.clusters.list
 - resourcemanager.projects.get
+- compute.networks.useExternalIp
 - compute.subnetworks.useExternalIp
 - compute.addresses.use
