Fix typos and add file location

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -838,8 +838,8 @@ groups:
       severity: ticket
     annotations:
       summary: A machine booted recently, but has not reported success yet.
-      description: Failing to report succes may be due to a configuration or
+      description: Failing to report success may be due to configuration or
         runtime failures. Check the machine console messages via the DRAC.
-        Check the k8s setup logs on the machine. Check the epoxy-boot-api VM
-        logs in Stackdriver.
+        Check the k8s setup logs on the machine (/tmp/setup_k8s.log). Check the
+        epoxy-boot-api VM logs in Stackdriver.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/JaSyFC9mk/boot-nodes
