Update ubuntu gpg key

--- a/.travis.yml
+++ b/.travis.yml
@@ -175,5 +175,6 @@ deploy:
 before_install:
 - travis/decrypt.sh "$encrypted_1c8dd3704323_key" "$encrypted_1c8dd3704323_iv"
   keys/service-accounts.tar.enc /tmp/service-accounts.tar /tmp
+- sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 6B05F25D762E3157
 - sudo apt-get -qq update
 - sudo apt-get install -y apache2-utils
