Scrapes filesystem size and free metrics from platform cluster Prometheus instance so that we can alert on them, as well as be queryable by mlab-ns.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -305,6 +305,8 @@ scrape_configs:
       'match[]':
         - 'up{job=~".+"}'
         - 'lame_duck_experiment{job!="node-exporter"}'
+        - 'node_filesystem_size_bytes{deployment="node-exporter", mountpoint="/cache/data"}'
+        - 'node_filesystem_free_bytes{deployment="node-exporter", mountpoint="/cache/data"}'
     static_configs:
       - targets: ['k8s-prometheus.{{PROJECT}}.measurementlab.net:9090']
         labels:
