Modifies the dashboard annotation of an alert to point at mlab-oti, not mlab-sandbox.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1005,5 +1005,5 @@ groups:
         point has exceed 95% usage. Check that the pusher sidecar container in
         all pods is working. See which pod is using all the space with `df -sh
         /cache/data/*`.
-      dashboard: https://grafana.mlab-sandbox.measurementlab.net/d/rJ7z2Suik/k8s-site-overview
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/rJ7z2Suik/k8s-site-overview
 
