--- a/k8s/prometheus-federation/deployments/reboot-api.yml
+++ b/k8s/prometheus-federation/deployments/reboot-api.yml
@@ -6,11 +6,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: reboot-api
+      run: reboot-api
   template:
     metadata:
       labels:
-        app: reboot-api
+        run: reboot-api
     spec:
       containers:
       - name: reboot-api
