tls.host -> tls.hostname.

--- a/k8s/prometheus-federation/deployments/reboot-api.yml
+++ b/k8s/prometheus-federation/deployments/reboot-api.yml
@@ -20,7 +20,7 @@ spec:
           - "-reboot.key=/var/secrets/reboot-api-ssh.key"
           - "-auth.username={{REBOOTAPI_USER}}"
           - "-auth.password={{REBOOTAPI_PASS}}"
-          - "-tls.host={{REBOOTAPI_TLS_HOST}}"
+          - "-tls.hostname={{REBOOTAPI_TLS_HOST}}"
         env:
           - name: GOOGLE_APPLICATION_CREDENTIALS
             value: /var/secrets/reboot-api-credentials.json
